Fixed header and navbar overflow

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -15,6 +15,8 @@
 
     background-color: white;
     font-family: 'Ubuntu', sans-serif;
+
+    white-space: nowrap;
 }
 
 #YU-logo {
@@ -103,6 +105,8 @@
     background-color: #6972b7;
 
     white-space: nowrap;
+
+    min-width: 1036px;
 }
 
 .navbar .nav-link {
